Bug-fix - modal now wraps the video content

--- a/public/media-player.css
+++ b/public/media-player.css
@@ -1,6 +1,4 @@
-.container-video {
-height: calc(100vh - 115px);
-}
+
 
 .video {
 	width: 100%;
@@ -79,3 +77,11 @@ height: calc(100vh - 115px);
 video.loading {
 	background: black url(/assets/loading30x30.gif) center center no-repeat;
   }
+
+.center-modal {
+display: flex;
+}
+.center-modal .modal {
+position: relative;
+width: auto;
+}
